[gd_scene load_steps=6 format=3 uid="uid://csa800mt3ikwj"]

[ext_resource type="Script" uid="uid://u08fmoms33bq" path="res://Games/Padlocks/Scripts/padlocks_main.gd" id="1_166ec"]
[ext_resource type="PackedScene" uid="uid://bpn3vhco752hu" path="res://Games/Padlocks/padlock.tscn" id="1_fxi86"]
[ext_resource type="Texture2D" uid="uid://bkjyq5g2slxkl" path="res://TV.png" id="2_jyp0o"]
[ext_resource type="PackedScene" uid="uid://2tvak5tl4xjb" path="res://Shared/timer.tscn" id="3_qepfn"]
[ext_resource type="AudioStream" uid="uid://cga7lo3037upu" path="res://music.wav" id="5_rx7lx"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_166ec")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jyp0o")

[node name="Lock1" parent="." instance=ExtResource("1_fxi86")]
layout_mode = 1
offset_left = 437.416
offset_top = 78.912
offset_right = 653.416
offset_bottom = 294.912

[node name="Lock2" parent="." instance=ExtResource("1_fxi86")]
layout_mode = 1
offset_left = 218.416
offset_top = 184.912
offset_right = 434.416
offset_bottom = 400.912

[node name="Lock3" parent="." instance=ExtResource("1_fxi86")]
layout_mode = 1
offset_left = 438.416
offset_top = 300.912
offset_right = 654.416
offset_bottom = 516.912

[node name="Lock4" parent="." instance=ExtResource("1_fxi86")]
layout_mode = 1
offset_left = 665.416
offset_top = 190.912
offset_right = 881.42
offset_bottom = 406.912

[node name="ProgressBar" parent="." instance=ExtResource("3_qepfn")]
layout_mode = 0
offset_left = 792.0
offset_top = 108.0
offset_right = 1045.0
offset_bottom = 135.0
nextScene = "res://Games/Pipes/pipes-main.tscn"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rx7lx")
autoplay = true
